app/components/Chart.module.css
.container {
	width: var(--chart-width);
	background-color: var(--chart-bg, var(--color-bg-high));
	border-radius: var(--radius-box);
}

.tooltip {
	border: var(--border-style);
	border-radius: var(--radius-box);
	background-color: var(--color-bg);
	padding: var(--s-1) var(--s-2);
	font-weight: var(--weight-semi);
	font-size: var(--font-sm);
	display: flex;
	flex-direction: column;
	gap: var(--s-1);
}

.tooltipValue {
	margin-inline-start: auto;
	min-width: 40px;
}

.dot {
	background-color: var(--dot-color);
	border-radius: 100%;
	width: 12px;
	height: 12px;
}

